unpackaged/main/default/objects/SurveyInvitation/fields/Created_Date_GMT_5__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_GMT_5__c</fullName>
    <formula>IF(CreatedDate &gt; DATETIMEVALUE(CASE(MOD( DATE(YEAR(TODAY()), 10, 31) - DATE (1900,1,7),7),
0, DATE(YEAR(TODAY()), 10, 31),
1, DATE(YEAR(TODAY()), 10, 31)-1,
2, DATE(YEAR(TODAY()), 10, 31)-2,
3, DATE(YEAR(TODAY()), 10, 31)-3,
4, DATE(YEAR(TODAY()), 10, 31)-4,
5, DATE(YEAR(TODAY()), 10, 31)-5,
DATE(YEAR(TODAY()), 10, 31)-6
)) &amp;&amp; CreatedDate &lt; DATETIMEVALUE(DATE(YEAR(TODAY())+1, 4, 1) +
CASE( MOD( DATE(YEAR(TODAY()) +1, 4, 1) - DATE( 1900, 1, 7 ), 7 ), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 1 )), CreatedDate - (6/24)
, CreatedDate - (5/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (GMT-5)</label>
    <type>DateTime</type>
</CustomField>