unpackaged/main/default/objects/SurveyInvitation/fields/Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Name__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_430, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_430))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Name</label>
    <type>Text</type>
</CustomField>