unpackaged/main/default/objects/SurveyInvitation/fields/Last_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Email__c</fullName>
    <label>Last_Email</label>
    <type>Date</type>
</CustomField>