unpackaged/main/default/objects/SurveyInvitation/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <formula>Proceso_ATC__r.Lote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lote</label>
    <type>Text</type>
</CustomField>