unpackaged/main/default/objects/SurveyInvitation/fields/Mazana__c.field-meta.xml
<CustomField>
    <fullName>Mazana__c</fullName>
    <formula>Proceso_ATC__r.Manzana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mazana</label>
    <type>Text</type>
</CustomField>