unpackaged/main/default/objects/SurveyInvitation/fields/No_Migrada__c.field-meta.xml
<CustomField>
    <fullName>No_Migrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Migrada</label>
    <type>Checkbox</type>
</CustomField>