unpackaged/main/default/objects/SurveyInvitation/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <formula>Proceso_ATC__r.Plaza__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaza</label>
    <type>Text</type>
</CustomField>