unpackaged/main/default/objects/SurveyInvitation/fields/Proceso_ATC__c.field-meta.xml
<CustomField>
    <fullName>Proceso_ATC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso ATC</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Invitaciones de encuestas</relationshipLabel>
    <relationshipName>Invitaciones_de_encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>