unpackaged/main/default/objects/SurveyInvitation/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>