unpackaged/main/default/objects/SurveyInvitation/fields/SR_Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>SR_Update_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SR Update Flag</label>
    <type>Checkbox</type>
</CustomField>